--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    </head>
 
   <body>
+    <div class="navbar">
+      <%= link_to "Home", restaurants_path %>
+      <%= link_to "Add a New Restaurant", new_restaurant_path %>
+    </div>
     <%= yield %>
   </body>
 </html>
